new proj/src/objects/GE_ES_Request_Type__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Is_Letter_of_Credit_Required__c</fullName>
        <label>Is Letter of Credit Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_There_any_Advance_payment__c</fullName>
        <label>Is There any Advance payment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_This_Product_for_Military_Use__c</fullName>
        <label>Is This Product for Military Use</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_equipment_under_warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is equipment under warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_this_Internal_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this Internal Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Itrm_FOBDDP__c</fullName>
        <label>Incoterm (FOB, DDP..)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Job_Status__c</fullName>
        <label>Job Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Labcst_Yield__c</fullName>
        <label>Labour cost (Yielded) **</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Ldtm_EstRel__c</fullName>
        <label>Lead-time,in weeks,From Release to Mfg**</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Request_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Maft_Loc__c</fullName>
        <label>Manufacturing Location **</label>
        <picklist>
            <picklistValues>
                <fullName>Anasco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fremont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangzhou (Jabil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India (Plexus)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pyong Taek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St.Mary&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taunton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tijuana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Market_Segment__c</fullName>
        <label>Market Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNKNOWN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Market_Sub_segment__c</fullName>
        <label>Market Sub-segment</label>
        <picklist>
            <controllingField>GE_ES_Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive (Car, SUV &amp; Pickup)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio/Gas Landfill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BioTechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical /Speciality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressed Air &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Labs - Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Labs - Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense/Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense/Military non-aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor - Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor - Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor - Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC - Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC - Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flight Qualified</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Mat_c_Yield__c</fullName>
        <label>Material cost (Yielded) **</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Measurand__c</fullName>
        <label>Measurand</label>
        <picklist>
            <picklistValues>
                <fullName>Humidity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temperature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas &amp; Moisture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Media_Comptblty_or_accble_wetted__c</fullName>
        <label>Media Compat. or acceptable wetted parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Motor_Quote_Type__c</fullName>
        <label>Motor Quote Type:</label>
        <picklist>
            <picklistValues>
                <fullName>Replacement Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specification Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC 24 HR Turnaround</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Motor_Request_Type__c</fullName>
        <label>Motor Request Type:</label>
        <picklist>
            <picklistValues>
                <fullName>NEMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both NEMA &amp; IEC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_NLH_R_at_Room_Temp__c</fullName>
        <label>Combined Accuracy NLH &amp; R at Room Temp</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_Line_Items_to_be_Quoted__c</fullName>
        <label>Number Line Items to be Quoted:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_Pages_in_Specification__c</fullName>
        <label>Number Pages in Specification:</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_OB_Trns_Arrngmt_Pb__c</fullName>
        <label>OB Transport Arrangement - Paid By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_OB_Trns_Arrngmt__c</fullName>
        <label>OB Transport Arrangement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_One_time_buy_or_Continuous_Program__c</fullName>
        <label>One-time buy or Continuous Program</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor/Incumbent price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer given - Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer given - Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Estimate (Others)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Estimate (Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time Buy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Onsite_Dt__c</fullName>
        <label>Onsite Customer Want Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Onsite?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Operating_Temperature_Media__c</fullName>
        <label>Operating Temperature (Media)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Selling_Price_Currency__c</fullName>
        <label>Opportunity Selling Price Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Share</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Order_Probability__c</fullName>
        <label>Order Probability:</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Estimate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Out_Cst_Est__c</fullName>
        <label>Outside Service Costs Estimates</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Output_Signal_Type__c</fullName>
        <label>Output Signal Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_POV__c</fullName>
        <label>PO Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_PPAP_Required__c</fullName>
        <label>PPAP Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Part_Number__c</fullName>
        <label>GE Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Permanent_Establishment_P_E__c</fullName>
        <label>Permanent Establishment (P/E)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Pole_of_Customer_Location__c</fullName>
        <label>Pole of Customer Location</label>
        <picklist>
            <picklistValues>
                <fullName>GE Sensing - Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Sensing - Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Sensing - EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Sensing - EMEA - Non EU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Possible_Model_Type__c</fullName>
        <label>Possible Model Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Pressure_Connection__c</fullName>
        <label>Pressure Connection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Pressure_Range_s__c</fullName>
        <label>Pressure Range(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Prm_Dt__c</fullName>
        <label>Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Probability__c</fullName>
        <label>Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <controllingField>GE_ES_Measurand__c</controllingField>
            <picklistValues>
                <fullName>BAS Differential Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAS RH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protimeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RH Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMS IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiSensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo Diode/ Photocell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Temperature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silicon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temperature Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermistor NTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermistor PTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermocouple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultrasonic Gas Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultrasonic Liquid Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flue Gas Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humidity Test &amp; Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial RH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Product_Line__c</fullName>
        <description>This value is constrained based on the value selected in the Product Family field</description>
        <label>Product Line</label>
        <picklist>
            <controllingField>GE_ES_Product_Family__c</controllingField>
            <picklistValues>
                <fullName>Flow Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete Flowmeters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Calibrations (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Contract (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Extended Warranty (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Field Service (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Other (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Rentals (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Repairs (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Training (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - Warranty (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spare Parts &amp; Accessories (F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalFlow - Flare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalFlow - Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalFlow - Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalFlow - Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalFlow - Stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigitalFlow - Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sentinel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport - Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AquaFlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AquaTrans - Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sentinel LCT / LNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport - Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PanaFlow MV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheonik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zirconium Oxide - Flue Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories - Humidity Test &amp; Cal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Name__c</fullName>
        <label>Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Opportunity_Name_Descripti__c</fullName>
        <label>Project/Opportunity Name/Description:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Qnty_Brk_1__c</fullName>
        <label>Quantity, Break 1 ***</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Qnty_Brk_2__c</fullName>
        <label>Quantity, Break 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Qnty_Brk_3__c</fullName>
        <label>Quantity, Break 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Completion_Date_Time__c</fullName>
        <label>Quote Completion Date/Time:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Complexity__c</fullName>
        <label>Quote Complexity:</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Exceptions_Highlights__c</fullName>
        <label>Quote Exceptions/Highlights:</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Ownership_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Ownership Person:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Receipt_Date_Time__c</fullName>
        <label>Quote Receipt Date/Time:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Remarks__c</fullName>
        <label>Quote Remarks:</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Start_Date_Time__c</fullName>
        <label>Quote Start Date/Time:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quote_Team_Rk__c</fullName>
        <formula>GE_ES_Quote_Completion_Date_Time__c  -  GE_ES_Customer_Quote_Due_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Team Rk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_RCS_lines_dispositioned_as_Won__c</fullName>
        <label>RCS lines dispositioned as &apos;Won&apos;?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_RFQ_Receipt_Date__c</fullName>
        <label>RFQ Receipt Date</label>
        <type>Date</type>
    </fields>
</CustomObject>